<resources>
    <!-- Welcome -->
    <string name="app_name">PikaCatch</string>
    <string name="author_name">Travis Chan</string>
    <string name="skip">Skip</string>
    <string name="pikachu">Pikachu</string>
    <string name="pokeball">Pokeball</string>
    <!-- Main Menu -->
    <string name="main_menu">Main Menu</string>
    <string name="play_game">Play Game!</string>
    <string name="options">Options</string>
    <string name="help">Help</string>
    <string name="pikacatch">PikaCatch</string>
    <!-- GameScreen -->
    <string name="setting">%dx%d,%d</string>
    <string name="scans_used"># Scans used: %d</string>
    <string name="found">Found %d of %d Pikachu</string>
    <string name="high_score">High Score for %dx%d with %d Pikachu: %s</string>
    <string name="na">N/A</string>
    <string name="times_played">Times Played: %d</string>
    <!-- Congrats -->
    <string name="congratulations">Congratulations</string>
    <string name="you_have_found_all_the_pikachu">You have found all the Pikachu!</string>
    <string name="partypikachu">partypikachu</string>
    <!-- Options -->
    <string name="board_size">Board Size</string>
    <string name="of_pikachu"># of Pikachu</string>
    <string name="reset_highscore">Reset High Score</string>
    <string name="reset_games_played">Reset Games Played</string>
    <!-- Help  -->
    <string name="author">Author:</string>
    <string name="school_class">Class:</string>
    <string name="how_to_play">How to Play</string>
    <string name="htp_content"> PikaCatch is a game where the player tries to find all the Pikachu hiding in the Poke Balls.
                                \nA given amount of Pikachu will hide in a set amount of Poke Balls and both can be changed in the options.
                                \nThe player can open the Poke Ball, either revealing a Pikachu or a number.
                                \nThis number shows the amount of hidden Pikachu in same row and column.
                                \nThe objective of the game is to find all the Pikachu with the fewest number of scans.</string>
    <string name="resources_used">Resources Used</string>
    <string name="images">Images</string>
    <string name="background">Background</string>
    <string name="link_cmpt276"><a href="https://opencoursehub.cs.sfu.ca/jackt/grav-cms/cmpt276/home">CMPT 276</a></string>
    <string name="link_pokemongo"><a href="https://pokemongolive.com/en/">Pokemon Go</a></string>
    <string name="link_emma"><a href="https://www.deviantart.com/emma2727">Emma2727 Deviant Art</a></string>
    <string name="link_lg"><a href="https://pokemonletsgo.pokemon.com/en-ca/">Let\'s go Pikachu</a></string>
    <string name="link_hat"><a href="https://www.threadless.com/@Hat_Boy">Hat_Boy Threadless</a></string>
    <string name="link_anony"><a href="https://archive.nyafuu.org/vp/thread/30398319/">Anonymous</a></string>
    <string name="link_caveman"><a href="https://wallpapercave.com/electric-pokemon-wallpapers">Caveman</a></string>
</resources>