<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cave_background"
    tools:context=".activites.Help">

    <TextView
        android:id="@+id/help_txtCave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/link_caveman"
        app:layout_constraintEnd_toEndOf="@+id/help_txtBack"
        app:layout_constraintStart_toStartOf="@+id/help_txtBack"
        app:layout_constraintTop_toBottomOf="@+id/help_txtAnony" />

    <TextView
        android:id="@+id/help_txtHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/help"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/help_txtAuthorT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/help_txtAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/author_name"
        app:layout_constraintStart_toEndOf="@+id/help_txtAuthorT"
        app:layout_constraintTop_toTopOf="@+id/help_txtAuthorT" />

    <TextView
        android:id="@+id/help_txtPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/how_to_play"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_txtAuthorT" />

    <TextView
        android:id="@+id/help_txtHTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/htp_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_txtPlay" />

    <TextView
        android:id="@+id/help_txtImages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:linksClickable="false"
        android:text="@string/resources_used"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_txtHTP" />

    <ImageView
        android:id="@+id/help_imgPokeball"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/pokeball"
        app:layout_constraintBottom_toBottomOf="@+id/help_imgPikachu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/help_imgPikachu"
        app:srcCompat="@drawable/pokeball" />

    <ImageView
        android:id="@+id/help_imgPikachu"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/pikachu"
        app:layout_constraintStart_toEndOf="@+id/help_imgPokeball"
        app:layout_constraintTop_toBottomOf="@+id/help_txtImages"
        app:srcCompat="@drawable/pikachu" />

    <ImageView
        android:id="@+id/help_imgParty"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="76dp"
        android:contentDescription="@string/partypikachu"
        app:layout_constraintBottom_toBottomOf="@+id/help_imgPikachu"
        app:layout_constraintStart_toEndOf="@+id/help_imgPokeball"
        app:layout_constraintTop_toTopOf="@+id/help_imgPikachu"
        app:srcCompat="@drawable/partypikachu" />

    <TextView
        android:id="@+id/help_txtPoGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/link_pokemongo"
        app:layout_constraintEnd_toEndOf="@+id/help_imgPikachu"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/help_imgPikachu"
        app:layout_constraintTop_toBottomOf="@+id/help_imgPokeball" />

    <ImageView
        android:id="@+id/help_imgPikaBall"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/pikacatch"
        app:layout_constraintStart_toEndOf="@+id/help_imgParty"
        app:layout_constraintTop_toBottomOf="@+id/help_txtImage"
        app:srcCompat="@drawable/pikaball" />

    <TextView
        android:id="@+id/help_txtEmma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/link_emma"
        app:layout_constraintEnd_toEndOf="@+id/help_imgPikaBall"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="@+id/help_imgPikaBall"
        app:layout_constraintTop_toBottomOf="@+id/help_imgPikaBall" />

    <TextView
        android:id="@+id/help_txtImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/images"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/help_txtImages"
        app:layout_constraintTop_toBottomOf="@+id/help_txtImages" />

    <TextView
        android:id="@+id/help_txtBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:text="@string/background"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/help_txtImages"
        app:layout_constraintTop_toBottomOf="@+id/help_txtImages" />

    <TextView
        android:id="@+id/help_txtLG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/link_lg"
        app:layout_constraintEnd_toEndOf="@+id/help_txtBack"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/help_txtBack"
        app:layout_constraintTop_toBottomOf="@+id/help_txtBack" />

    <TextView
        android:id="@+id/help_txtHat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/link_hat"
        app:layout_constraintEnd_toEndOf="@+id/help_txtBack"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/help_txtBack"
        app:layout_constraintTop_toBottomOf="@+id/help_txtLG" />

    <TextView
        android:id="@+id/help_txtAnony"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/link_anony"
        app:layout_constraintEnd_toEndOf="@+id/help_txtBack"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/help_txtBack"
        app:layout_constraintTop_toBottomOf="@+id/help_txtHat" />

</androidx.constraintlayout.widget.ConstraintLayout>